fix: enhance notification and DateTimeMenu layout with improved text wrapping and spacing

--- a/styles/datemenu.scss
+++ b/styles/datemenu.scss
@@ -36,6 +36,7 @@
         border: variable.$border;
         border-radius: variable.$radius;
         background-color: theme.$background;
+        margin-right: 5px;
         border-width: 2px;
 
         label {
